Revert "Update Substrate to use latest GraalVM (JDK 23) and JavaFX 24-ea (#1273)"
This reverts commit f93489a4e6706552c8aeebb9482e2cbbc03f9a37.